# nts

./: CHANGELOG.md  LICENSE  Main_archive.bak  README.md  haskell-is-fun.md  journal-template.txt  nts.cabal  test-of-the-data-files-dir-haskell-cli.md  this-is-a-title.md  this-is-another-title.md
app/: Config.hs  Error.hs  Executor.hs  File.hs  Help.hs  Journal.hs  Logger.hs  Main.hs  Note.hs  Parser.hs
lib/: Color.hs  Config.hs  Error.hs  Executor.hs  File.hs  Formatting.hs  Logger.hs  Note.hs  Parser.hs  Template.hs
templates/: journal-template.mustache  note-template.txt
test/: NtsTest.hs
