cabal-version:      3.14
name:               nts
version:            0.1.0.0
license:            NONE
author:             ViMichael
maintainer:         codingwithsphere@gmail.com
copyright:          MIT
build-type:         Simple

extra-doc-files:    CHANGELOG.md

data-files: 
  templates/note-template.txt, 
  templates/journal-template.txt

common warnings
    ghc-options: -Wall

executable nts
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Note
      Journal
      Help
      Error
      File
      Formatting
      Config
      Parser
      Executor
      Logger
      Color
      Paths_nts
      Template
    build-depends:    
      base ^>=4.20.0.0,
      filepath,
      time,
      aeson,
      directory,
      mustache,
      split,
      text
    hs-source-dirs:   app, lib
    default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: NtsTest.hs
  build-depends: base, HUnit
  hs-source-dirs: test, lib
  default-language: Haskell2010
